# Helios-Dashboard

./: .gitignore  .travis.yml  CMakeLists.txt  HeliosDashboardSetup.sh  HeliosQMLDash.qmlproject  HeliosQMLDash.qmlproject.qtds  HeliosQMLDash.qmlproject.qtds.67ad3d7  HeliosQMLDash.qmlproject.qtds.9a88d09  README.md  format.sh  main.qml  qmlcomponents  qmlmodules
Purgatory/: README.md
Purgatory/src/: FaultList.qml  qml.qrc
build-helios-dashboard-Desktop_Qt_6_1_0_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
build-helios-dashboard-Desktop_Qt_6_1_0_MinGW_64_bit-Debug/debug/: qrc_qml.cpp
content/: App.qml  Auxbms.ui.qml  AuxbmsScreen.qml  BatteryScreen.qml  CMakeLists.txt  Debug_board.qml  Debug_boardForm.ui.qml  DigitalSpeedComponenent.ui.qml  FaultsScreen.qml  Motor.ui.qml  MotorScreen.qml  Screen01.ui.qml  Screen2.qml
content/Helios Gauge Cluster _ Good Draft - v1/: Frame_1.ui.qml
content/debug_screens/: DriverControlsScreen.qml  MainScreen.ui.qml  MotorScreen.qml  MpptScreen.qml
content/helios-dash/: Component_1.ui.qml  Gauge_cluster.ui.qml  Switch.ui.qml
content/race_screen/: BackPlate.qml  BackPlate.ui.qml  CameraScreen.qml  Component_1.ui.qml  ConsoleScreen.qml  Dashboard.ui.qml  NotificationPanel.qml  Switch.ui.qml
imports/: CMakeLists.txt
imports/HeliosQMLDash/: CMakeLists.txt  qmldir
src/: Battery.qml  CommunicationContainer.cpp  ContactorInfo.qml  FaultList.qml  FaultListDelegate.qml  FaultListModel.qml  HeliosDashboard.pro  Hexagon.qml  Road.qml  SignalBar.qml  SpeedInfo.qml  SpeedNumber.qml  config.ini.example  import_qml_plugins.h  main.cpp  main.qml  qml.qrc
(+115 files in other folders)
